[package]
name = "pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
sdl2 = "0.35.2"
common = { path = "../common" }
mos6502 = { path = "../mos6502", features = ["debugger"] }